--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -3,20 +3,19 @@
 
 FROM node:slim
 
-RUN apt-get -y update && \
-    apt-get -y upgrade && \
-    apt-get -y install build-essential && \
-    apt-get -y install git && \
-    apt-get -y install libpng-dev && \
-    apt-get -y install python3
-
-RUN curl -kL https://bootstrap.pypa.io/get-pip.py | python3 && \
-    pip3 install awscli && \
-    pip3 install awscli-local
-
-RUN npm install --global gatsby && \
-    npm install --global @aws-amplify/cli && \
-    npm install --global serverless && \
-    npm install --save-dev serverless-localstack
-
 WORKDIR /app
+
+RUN apt-get -y -qq update \
+  && apt-get -y -qq upgrade \
+  && apt-get -y install build-essential \
+  && apt-get -y install git \
+  && apt-get -y install libpng-dev \
+  && apt-get -y install python3
+
+RUN curl -kL https://bootstrap.pypa.io/get-pip.py | python3 \
+  && pip3 install awscli \
+  && pip3 install awscli-local
+
+RUN npm install --global gatsby \
+  && npm install --global @aws-amplify/cli \
+  && npm install --global serverless
