秘匿情報をコミットしそうになるのでenvファイルを外に切り出し

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ localstack
 mongo
 mysql
 postgres
+
 ruby/vendor/bundle
+
 node/node_modules
 node/amplify/team-provider-info.json
+
+Envfiles/*.env
