--- a/Envfiles/sam.env.sample
+++ b/Envfiles/sam.env.sample
@@ -3,3 +3,5 @@ AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxx
 AWS_DEFAULT_REGION=ap-northeast-1
 AWS_REGION=ap-northeast-1
 AWS_SESSION_TOKEN=xxxxxxxxxxxxxxx
+
+LOCALSTACK_HOST=localstack
