--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,12 @@ x-ruby: &ruby
 
 services:
 
-  # rails:
-  #   <<: *ruby
-  #   container_name: rails
-  #   ports:
-  #     - '3000:3000'
-  #   command: 'bundle exec rails server -b 0.0.0.0'
+  rails:
+    <<: *ruby
+    container_name: rails
+    ports:
+      - '3000:3000'
+    command: 'bundle exec rails server -b 0.0.0.0'
 
   # sidekiq:
   #   <<: *ruby
@@ -55,15 +55,15 @@ services:
   #     - ./App/node/node_modules:/app/node_modules
   #   tty: true
 
-  # postgres:
-  #   image: postgres
-  #   restart: always
-  #   ports:
-  #     - '5432:5432'
-  #   environment:
-  #     POSTGRES_PASSWORD: password
-  #   volumes:
-  #     - ./LocalData/postgres:/var/lib/postgresql
+  postgres:
+    image: postgres
+    restart: always
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_PASSWORD: password
+    volumes:
+      - ./LocalData/postgres:/var/lib/postgresql
 
   # mysql:
   #   image: mysql
